# PDS_Project

./: README.md
Notepad_Project/CLion/notepad/: CMakeLists.txt  Message.cpp  Message.h  Symbol.cpp  main.cpp  notepad.cpp  notepad.h
Notepad_Project/CLion/notepad/include/: NetworkingData.h  Notepad.h  StartDialog.h  Symbol.h
Notepad_Project/CLion/notepad/src/: Message.cpp  NetworkingData.cpp  Notepad.cpp  StartDialog.cpp  main.cpp  notepad.ui
Notepad_Project/CLion/notepad/ui/: notepad.ui  startdialog.ui
Notepad_Project/QtCreator/notepad/: notepad.cpp  notepad.h
PDS-Es3/: CMakeLists.txt  Message.cpp  Message.h  NetworkServer.cpp  NetworkServer.h  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h  main.cpp
PDS_client_server_v1/PDS_Client/: CMakeLists.txt  Message.cpp  Message.h  Request.cpp  Request.h  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h  main.cpp
PDS_client_server_v1/PDS_Server/: CMakeLists.txt  Message.cpp  NetworkServer.cpp  SharedEditor.cpp  SharedEditor.h
PDS_client_server_v2/PDS_Notepad_Client/include/: Notepad.h  Request.h
PDS_client_server_v2/PDS_Notepad_Client/src/: Notepad.cpp  Request.cpp  StartDialog.cpp  Symbol.cpp
PDS_client_server_v2/PDS_Server/: CMakeLists.txt  Request.cpp  SharedEditor.h
PDS_client_server_v2/PDS_Server/include/: Message.h  NetworkServer.h  Request.h  Symbol.h
PDS_client_server_v2/PDS_Server/src/: NetworkServer.cpp  main.cpp
PDS_client_server_v3/PDS_Notepad_Client/: CMakeLists.txt  notepad.qrc
PDS_client_server_v3/PDS_Notepad_Client/include/: Collaborator.h  DocumentsModel.h  Message.h  ModifyProfileDialog.h  MyTextEdit.h  NetworkingData.h  Notepad.h  Request.h  Response.h  SharedDocumentsExplorer.h  SignUpDialog.h  StartDialog.h  Symbol.h
PDS_client_server_v3/PDS_Notepad_Client/src/: Collaborator.cpp  DocumentsModel.cpp  Message.cpp  ModifyProfileDialog.cpp  MyTextEdit.cpp  NetworkingData.cpp  Notepad.cpp  Request.cpp  Response.cpp  SharedDocumentsExplorer.cpp  SignUpDialog.cpp  StartDialog.cpp  Symbol.cpp
PDS_client_server_v3/PDS_Notepad_Client/ui/: modifyprofiledialog.ui  notepad.ui  shareddocumentsexplorer.ui  signupdialog.ui
PDS_client_server_v3/PDS_Server/: CMakeLists.txt
PDS_client_server_v3/PDS_Server/include/: Collaborator.h  Message.h  NetworkServer.h  Request.h  Response.h  SharedDocument.h  Symbol.h
PDS_client_server_v3/PDS_Server/src/: Collaborator.cpp  Message.cpp  NetworkServer.cpp  Request.cpp  Response.cpp  SharedDocument.cpp  SharedEditor.cpp  Symbol.cpp  main.cpp
PDS_client_server_v4/PDS_Notepad_Client/: CMakeLists.txt
PDS_client_server_v4/PDS_Notepad_Client/include/: Collaborator.h  Message.h  MyTextEdit.h  Notepad.h  SerialSize.h  SignUpDialog.h  StartDialog.h
PDS_client_server_v4/PDS_Notepad_Client/src/: Collaborator.cpp  Message.cpp  MyTextEdit.cpp  Notepad.cpp  SharedDocumentsExplorer.cpp  StartDialog.cpp  Symbol.cpp
PDS_client_server_v4/PDS_Notepad_Client/ui/: notepad.ui  signupdialog.ui  startdialog.ui
PDS_client_server_v4/PDS_Server/: CMakeLists.txt
PDS_client_server_v4/PDS_Server/include/: Collaborator.h  Message.h  NetworkServer.h  Response.h  SerialSize.h  SharedDocument.h  SharedEditor.h
PDS_client_server_v4/PDS_Server/src/: Collaborator.cpp  Message.cpp  NetworkServer.cpp  Request.cpp  SharedDocument.cpp  SharedEditor.cpp  Symbol.cpp
notepad/: notepad.cpp  notepad.h  notepad.ui
